--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
   /* display basemap tiles -- see others at https://leaflet-extras.github.io/leaflet-providers/preview/ */
   L.tileLayer(
-    'https://tile.openstreetmap.org/{z}/{x}/{y}.png'', {
-      attribution: ''&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'">\
+    'https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution: ''&copy; <a href="https://osm.org/copyright">\
         OpenStreetMap</a> contributors, &copy;\
         <a href="https://carto.com/attribution">CARTO</a>'
   }).addTo(map);
