--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
   });
 
   /* display basemap tiles -- see others at https://leaflet-extras.github.io/leaflet-providers/preview/ */
-  L.tileLayer(
-    'https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: ''&copy; <a href="https://osm.org/copyright">\
-        OpenStreetMap</a> contributors, &copy;\
-        <a href="https://carto.com/attribution">CARTO</a>'
-  }).addTo(map);
+  L. tileLayer (
+'https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
+attribution: '&copy; <a href="https://osm.org/copyright">\
+OpenStreetMap</a> contributors, &сору; \ <a href="https://carto. com/attribution">CARTO</a>'
+}) -addTo (map) ;
 
   /* Display a point marker with pop-up text */
   L.marker([41.74793913876683, -72.69045263735848]).addTo(map) // EDIT marker coordinates
